--- a/ansible/playbooks/roles/elk/templates/elasticsearch-deployment.yaml.j2
+++ b/ansible/playbooks/roles/elk/templates/elasticsearch-deployment.yaml.j2
@@ -21,6 +21,8 @@ spec:
               value: single-node
             - name: ES_JAVA_OPTS
               value: "-Xms512m -Xmx512m"
+            - name: xpack.security.enabled
+              value: "false"
           ports:
             - containerPort: 9200
           resources:
