--- a/ansible/playbooks/roles/modeltrainer/templates/modeltrainer-deployment.yaml.j2
+++ b/ansible/playbooks/roles/modeltrainer/templates/modeltrainer-deployment.yaml.j2
@@ -30,7 +30,9 @@ spec:
                   name: hf-api-token-secret
                   key: HF_API_TOKEN
             - name: LOGSTASH_HOST
-              value: "logstash.{{ k8s_namespace }}.svc.cluster.local:5044"
+              value: "logstash"
+            - name: LOGSTASH_PORT
+              value: "5004"
             - name: MODEL_OUTPUT_DIR
               value: "/app/model_{{ safe_model }}"
           volumeMounts:
