added kibana and elastci working

--- a/ansible/playbooks/roles/modeltrainer/templates/modeltrainer-deployment.yaml.j2
+++ b/ansible/playbooks/roles/modeltrainer/templates/modeltrainer-deployment.yaml.j2
@@ -1,21 +1,16 @@
 {% set safe_model = (model_name | default('model') | string).lower().replace('_','-') %}
-apiVersion: apps/v1
-kind: Deployment
+apiVersion: batch/v1
+kind: Job
 metadata:
   name: modeltrainer-{{ safe_model }}
   namespace: {{ k8s_namespace }}
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: modeltrainer
-      model: "{{ safe_model }}"
   template:
     metadata:
       labels:
-        app: modeltrainer
-        model: "{{ safe_model }}"
+        app: modeltrainer-{{ safe_model }}
     spec:
+      restartPolicy: Never
       containers:
         - name: modeltrainer
           image: {{ modeltrainer_image }}
@@ -40,8 +35,6 @@ spec:
               mountPath: /app/data
             - name: model-output-volume
               mountPath: /app/model_{{ safe_model }}
-          ports:
-            - containerPort: 8080
           resources:
             limits:
               cpu: "1000m"
@@ -53,3 +46,4 @@ spec:
         - name: model-output-volume
           persistentVolumeClaim:
             claimName: model-output-pvc
+  backoffLimit: 0
