--- a/ansible/playbooks/roles/modeltrainer/templates/modeltrainer-deployment.yaml.j2
+++ b/ansible/playbooks/roles/modeltrainer/templates/modeltrainer-deployment.yaml.j2
@@ -15,6 +15,8 @@ spec:
         - name: modeltrainer
           image: {{ modeltrainer_image }}
           env:
+            - name: CLASSIFIER
+              value: {{ model_name }}
             - name: MODEL_TYPE
               value: {{ model_name }}
             - name: PROCESSED_DATA_PATH
